cmake_minimum_required(VERSION 3.24)
project(CPP_Code)

set(CMAKE_CXX_STANDARD 17)

add_executable(CPP_Code main.cpp "M_22-23(1)-5/Problem_1.cpp" "M_22-23(1)-5/Problem_2.cpp" "M_22-23(1)-5/Problem_3.cpp" "M_22-23(1)-5/Problem_4.cpp" "M_22-23(1)-5/Problem_5.cpp" "M_22-23(1)-5/Problem_6.cpp" "M_22-23(1)-4/Problem_1.cpp" "M_22-23(1)-4/Problem_2.cpp" "M_22-23(1)-4/Problem_3.cpp" "M_22-23(1)-4/Problem_4.cpp" "M_22-23(1)-4/Problem_5.cpp" "M_22-23(1)-4/Problem_6.cpp" "M_22-23(1)-3/Problem_1.cpp" "M_22-23(1)-3/Problem_2.cpp" "M_22-23(1)-3/Problem_3.cpp" "M_22-23(1)-3/Problem_4.cpp" "M_22-23(1)-3/Problem_5.cpp" "M_22-23(1)-3/Problem_6.cpp" "M_22-23(1)-2/Problem_1.cpp" "M_22-23(1)-2/Problem_2.cpp" "M_22-23(1)-2/Problem_3.cpp" "M_22-23(1)-2/Problem_4.cpp" "M_22-23(1)-2/Problem_5.cpp" "M_22-23(1)-2/Problem_6.cpp")

add_executable(Problem_1 "M_22-23(1)-2/Problem_1.cpp")
add_executable(Problem_5 "M_22-23(1)-2/Problem_5.cpp")
add_executable(Problem_2 "M_22-23(1)-2/Problem_2.cpp")
add_executable(Problem_3 "M_22-23(1)-2/Problem_3.cpp")
add_executable(Problem_4 "M_22-23(1)-2/Problem_4.cpp")
add_executable(Problem_6 "M_22-23(1)-3/Problem_6.cpp")
